<resources>
    <string name="app_name">Miaudote</string>
    <string name="texto_animal">O Tom teve o\nprocesso de\nadoção iniciado</string>
    <string name="ou">ou</string>
    <string name="cadastrar">CADASTRAR</string>
    <string name="entrar">ENTRAR</string>
    <string name="adotante">Adotante</string>
    <string name="ong">ONG</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="senha">Senha</string>
    <string name="digite_seu_e_mail">Digite seu e-mail</string>
    <string name="e_mail">E-mail</string>
    <string name="login">LOGIN</string>
    <string name="cadastro">CADASTRO</string>
    <string name="informacoes_iniciais">Informações iniciais</string>
    <string name="razao_social_nome_da_ong">Razão social (nome da ONG)</string>
    <string name="nome_do_responsavel">Nome do responsável</string>
    <string name="cnpj">CNPJ</string>
    <string name="telefone">Telefone</string>
    <string name="data_de_fundacao">Data de fundação</string>
    <string name="continuar">CONTINUAR</string>
    <string name="informacoes_de_endereco">Informações de endereço</string>
    <string name="cep">CEP</string>
    <string name="logradouro">Logradouro</string>
    <string name="bairro">Bairro</string>
    <string name="numero">Número</string>
    <string name="complemento">Complemento</string>
    <string name="voltar">VOLTAR</string>
    <string name="informacoes_de_login">Informações de login</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="finalizar">FINALIZAR</string>
    <string name="nome_pet">THOR</string>
    <string name="_3_anos">3 anos</string>
    <string name="macho">Macho</string>
    <string name="pelo_curto">Pelo Curto</string>
    <string name="descricao">DESCRIÇÃO</string>
    <string name="descricao_pet">Sou empolgado, as vezes atrapalhado e adoro brincar! Posso ser agitado mas vou deixar o seu dia bem mais animado.</string>
    <string name="porte">PORTE</string>
    <string name="pequeno">Pequeno</string>
    <string name="m_dio">Médio</string>
    <string name="grande">Grande</string>
    <string name="localiza_o">LOCALIZAÇÃO</string>
    <string name="esse_pet">ESSE PET...</string>
    <string name="j_foi_vacinado">Já foi vacinado</string>
    <string name="j_foi_castrado">Já foi castrado</string>
    <string name="chegou_em_2020">Chegou em 2020</string>
    <string name="ong_respons_vel">ONG RESPONSÁVEL</string>
    <string name="nome_da_ong">Nome da ONG</string>
    <string name="pataamiga">PATAAMIGA</string>
    <string name="whatsapp">WHATSAPP</string>
    <string name="email">EMAIL</string>
    <string name="n_o_pode_adotar_mas_gostaria_de_ajudar">NÃO PODE ADOTAR MAS GOSTARIA DE AJUDAR?</string>
    <string name="ajudar">AJUDAR</string>
    <string name="est_h_2km_de_voc">Está há 2km de você</string>
    <string name="text_adoption">Esse pet já encontrou um lar ou teve seu processo de adoção cancelado? Confirme clicando no botão abaixo</string>
    <string name="o_tom_teve_o_processo_de_ado_o_iniciado">O Tom teve o processo de adoção iniciado</string>
    <string name="confirmar_ado_o">Confirmar adoção</string>
    <string name="cancelar_ado_o">Cancelar adoção</string>
    <string name="_1">1</string>
    <string name="_5">5</string>
    <string name="tom_j_foi_favoritado_5_vezes">Tom já foi favoritado 5 vezes</string>
    <string name="informa_es_do_pet">INFORMAÇÕES DO PET</string>
    <string name="tem_como_necessidade_especial_erlichiose">Tem como necessidade especial: Erlichiose</string>
    <string name="d_vidas_sobre_seu_pet">DÚVIDAS SOBRE SEU PET?</string>
    <string name="nossos_artigos_podem_te_ajudar">NOSSOS ARTIGOS PODEM TE AJUDAR</string>
    <string name="adotei_e_agora">Adotei, e agora?</string>
    <string name="articles_resume">Leia sobre dicas dos primeiros passo sobre adoção do seu pet</string>
    <string name="pet_e_o_covid_19">Pets e o covid-19</string>
    <string name="leia_sobre_a_rela_o_entre_nosso_pet_e_o_corna_v_rus">Leia sobre a relação entre nossos pet e o corona vírus</string>
    <string name="conhecendo_seu_pet">CONHECENDO SEU PET</string>
    <string name="leia_sobre_como_entender_os_sentimentos_do_seu_pet">Leia sobre como entender os sentimentos do seu pet</string>
    <string name="patinhas_que_curam">pATINHAS QUE CURAM</string>
    <string name="leia_sobre_como_a_ado_o_de_animais_pode_ajudar_na_recupera_o_de_doen_as">Leia sobre como a adoção de animais pode ajudar na recuperação de doenças</string>
</resources>