<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_doubt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_forty_five"
            android:layout_marginTop="@dimen/space_thirty_two"
            android:layout_marginEnd="@dimen/space_forty_five"
            android:background="@drawable/ic_man_doubt"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/pageTitlePet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_one_hundred_five"
                android:layout_marginTop="@dimen/space_forty"
                android:layout_marginEnd="@dimen/space_sixty_five"
                android:text="@string/d_vidas_sobre_seu_pet"
                android:textColor="@color/dark_orange">

            </TextView>

            <TextView
                style="@style/namePet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_one_hundred_five"
                android:layout_marginTop="@dimen/space_fifteen"
                android:layout_marginEnd="@dimen/space_sixty_four"
                android:text="@string/nossos_artigos_podem_te_ajudar"
                android:textAllCaps="true">

            </TextView>


        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_forty_five"
            android:layout_marginTop="@dimen/space_thirty_two"
            android:layout_marginEnd="@dimen/space_forty_five"
            app:layout_constraintTop_toBottomOf="@id/layout_doubt">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4.49dp"
                android:orientation="vertical"
                android:outlineSpotShadowColor="@color/dark_orange">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="194dp"
                    android:background="@drawable/artigo_list1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        style="@style/pageTitlePet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/adotei_e_agora"
                        android:textAllCaps="true"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <TextView
                        style="@style/regularText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/articles_resume"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary" />


                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_forty_five"
            android:layout_marginTop="@dimen/space_thirty_two"
            android:layout_marginEnd="@dimen/space_forty_five"
            app:layout_constraintTop_toBottomOf="@id/card1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4.49dp"
                android:orientation="vertical"
                android:outlineSpotShadowColor="@color/dark_orange">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="194dp"
                    android:background="@drawable/artigo_list2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        style="@style/pageTitlePet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pet_e_o_covid_19"
                        android:textAllCaps="true"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <TextView
                        style="@style/regularText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/leia_sobre_a_rela_o_entre_nosso_pet_e_o_corna_v_rus"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary" />


                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_forty_five"
            android:layout_marginTop="@dimen/space_thirty_two"
            android:layout_marginEnd="@dimen/space_forty_five"
            app:layout_constraintTop_toBottomOf="@id/card2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4.49dp"
                android:orientation="vertical"
                android:outlineSpotShadowColor="@color/dark_orange">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="194dp"
                    android:background="@drawable/artigo_list3" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        style="@style/pageTitlePet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/conhecendo_seu_pet"
                        android:textAllCaps="true"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <TextView
                        style="@style/regularText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/leia_sobre_como_entender_os_sentimentos_do_seu_pet"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary" />


                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_forty_five"
            android:layout_marginTop="@dimen/space_thirty_two"
            android:layout_marginEnd="@dimen/space_forty_five"
            app:layout_constraintTop_toBottomOf="@id/card3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4.49dp"
                android:orientation="vertical"
                android:outlineSpotShadowColor="@color/dark_orange">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="194dp"
                    android:background="@drawable/artigo_list4" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        style="@style/pageTitlePet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/patinhas_que_curam"
                        android:textAllCaps="true"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <TextView
                        style="@style/regularText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/leia_sobre_como_a_ado_o_de_animais_pode_ajudar_na_recupera_o_de_doen_as"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary" />


                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/space_thirty_two"
            app:layout_constraintTop_toBottomOf="@id/card4">

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>